:bug: Fixed misaligned logo in footer

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -37,6 +37,8 @@
     }
 
     .logo-right {
+        display: grid;
+        align-items: center;
         margin-left: 5%;
     }
 }
